// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SearchResultsComponent > renders and matches snapshot when available 1`] = `
<div>
  <div
    class="results"
  >
    <div
      class="break-above row"
    >
      <div
        class="col-md-8 offset-md-2"
      >
        <h2
          class="blue"
        >
          Results
        </h2>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-8 offset-md-2"
      >
        <div
          class="searchResults available row"
        >
          <div
            class="col-md-4"
          >
            <h3>
              foobar.rsk
            </h3>
          </div>
          <div
            class="col-md-2"
          >
            <p
              class="status blue"
            >
              available
            </p>
          </div>
          <div
            class="col-md-3"
          >
            <p
              class="cost"
            >
              <span
                class="rifPrice"
              >
                6
                 rif
              </span>
              <span
                class="year"
              >
                /
                year
              </span>
            </p>
          </div>
          <div
            class="col-md-3"
          >
            <button
              class="register btn btn-primary"
              type="button"
            >
              register
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SearchResultsComponent > renders and matches snapshot when not available 1`] = `
<div>
  <div
    class="results"
  >
    <div
      class="break-above row"
    >
      <div
        class="col-md-8 offset-md-2"
      >
        <h2
          class="blue"
        >
          Results
        </h2>
      </div>
    </div>
    <div
      class="row"
    >
      <div
        class="col-md-8 offset-md-2"
      >
        <div
          class="searchResults notAvailable row"
        >
          <div
            class="col-md-6"
          >
            <h3>
              foobar.rsk
            </h3>
          </div>
          <div
            class="col-md-3"
          >
            <p
              class="status"
            >
              not available
            </p>
          </div>
          <div
            class="col-md-3"
          >
            <p
              class="searchAnother"
            >
              Please search another domain
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
